--- a/tuts0105-creating-rich-results.Rmd
+++ b/tuts0105-creating-rich-results.Rmd
@@ -4,7 +4,7 @@ title: "Creating Rich Results"
 
 In this section, we will add rich results to our analysis; a nice APA formatted table like this:
 
-![](tuts0105-creating-rich-results-apa.png){ width=337px }
+![](tuts0105-creating-rich-results-apa.png){width="337px"}
 
 Rich results are visually appealing, and make it easier for users of your module to 'parse' and understand the results your module produces. A lot of people find statistics challenging, so we might as well make them as accessible and easy to read as possible.
 
@@ -14,14 +14,14 @@ In order to provide rich results, we need to add some entries into the results d
 
 ```{yaml }
 ---
-  name:  ttest
+name:  ttest
 title: Independent Samples T-Test
 jrs:   '1.1'
 
 items:
-  - name:  text
-title: Independent Samples T-Test
-type:  Preformatted
+    - name:  text
+      title: Independent Samples T-Test
+      type:  Preformatted
 ```
 
 This is pretty similar to the `ttest.a.yaml` file; there's a name, a title, and a jamovi results spec (`jrs`) (note, this is different to the `jas` in the `.a.yaml` file). `items` comes next, and it describes all the items that make up the results. For example, the results could be made up of two tables and a plot. Each item in the results is listed here.
@@ -42,31 +42,31 @@ Modify `ttest.r.yaml` so it reads:
 
 ```{yaml }
 ---
-  name:  ttest
+name:  ttest
 title: Independent Samples T-Test
 jrs:   '1.1'
 
 items:
-  - name:  text
-title: Independent Samples T-Test
-type:  Preformatted
-
-- name:  ttest
-title: Independent Samples T-Test
-type: Table
-rows:  1
-columns:
-  - name: var
-title: ''
-type: text
-- name: t
-type: number
-- name: df
-type: integer
-- name: p
-type: number
-format: zto,pvalue
+    - name:  text
+      title: Independent Samples T-Test
+      type:  Preformatted
+    - name:  ttest
+      title: Independent Samples T-Test
+      type: Table
+      rows:  1
+      columns:
+        - name: var
+          title: ''
+          type: text
+        - name: t
+          type: number
+        - name: df
+          type: integer
+        - name: p
+          type: number
+          format: zto,pvalue
 ```
+
 
 With these modifications, we've added a new table called `ttest` with the title `Independent Samples T-Test`. We've also specified that it is to have 1 row, and that it has four columns; `var`, `t`, `df` and `p`. Notice that we've specified an empty string for the title of column `var`. If a title isn't specified the column name is used instead.
 
@@ -84,7 +84,7 @@ jmvtools::install()
 
 If you return to jamovi now, you'll see that the installed module has been updated and our earlier analysis has been rerun. The table we added is now visible in the results. This is pretty handy: whenever you reinstall a module, it is updated immediately. Your results should now look as follows:
 
-![](tuts0105-creating-rich-results-blank-table.png){ width=509px }
+![](tuts0105-creating-rich-results-blank-table.png){width="509px"}
 
 ## Populating a Table
 
@@ -109,10 +109,10 @@ We can assign each of these values to the row in our table with the `setRow()` f
 ```{r eval=FALSE}
 table <- self$results$ttest
 table$setRow(rowNo=1, values=list(
-  var=self$options$dep,
-  t=results$statistic,
-  df=results$parameter,
-  p=results$p.value
+    var=self$options$dep,
+    t=results$statistic,
+    df=results$parameter,
+    p=results$p.value
 ))
 ```
 
@@ -124,7 +124,7 @@ jmvtools::install()
 
 Our results in jamovi should look something like this:
 
-![](tuts0105-creating-rich-results-filled-table.png){ width=509px }
+![](tuts0105-creating-rich-results-filled-table.png){width="509px"}
 
 Now we have everything working, let's remove the text results:
 
@@ -159,7 +159,7 @@ ttestClass <- if (requireNamespace('jmvcore', quietly=TRUE)) R6::R6Class(
 
 then perform a reinstall with `jmvtools::install()`. Now we have a nice, attractive, minimalist t-test.
 
-![](tuts0105-creating-rich-results-final-table.png){ width=287px }
+![](tuts0105-creating-rich-results-final-table.png){width="287px"}
 
 Let's also take a look at running this analysis in an R session. We can install the package into R with:
 
@@ -175,15 +175,15 @@ data("ToothGrowth")
 ttest(ToothGrowth, dep='len', group='supp')
 ```
 
-```
-Independent Samples T-Test
-
-Independent Samples T-Test     
-────────────────────────────── 
-t       df    p       
-────────────────────────────── 
-len    1.92    55    0.061   
-────────────────────────────── 
+```         
+ Independent Samples T-Test
+ 
+ Independent Samples T-Test     
+ ────────────────────────────── 
+          t       df    p       
+ ────────────────────────────── 
+   len    1.92    55    0.061   
+ ────────────────────────────── 
 ```
 
 As can be seen, a nicely formatted table has been generated in R as well. Everything is maintained, right down to the number of decimal places. In this way jamovi can make R packages --- even if you have no intention of publishing as jamovi modules --- more attractive, easier to read, and more consistent too.
